# described-enum

./: .gitignore  README.md  pyproject.toml
described_enum/: __init__.py  _classes.py
